Aggiorna il titolo nel file di configurazione Jekyll per il catalogo dei plugin QGIS

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Catalogo Plugin QGIS - pigrecoinfinito
+title: pigrecoinfinito
 description: Repository centralizzato per plugin QGIS specializzati per l'elaborazione di dati geografici e catastali italiani
 theme: jekyll-theme-minimal
 author: Salvatore Fiandaca (Totò)
